--- a/paper/main.Rmd
+++ b/paper/main.Rmd
@@ -290,7 +290,7 @@ $D(P||Q) := \int^\infty_{-\infty} p(x)f(\frac{p(x)}{q(x)})$ is the KL divergence
 
 ### Definitions
 
-Consider two cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets. Let the pairwise distances between pairs $(a_{j} b_{k}, a_{j'}, b_{k})$ be denoted as $d_{(jk, j', k')} = JSD(a_{j}b_{k}, a_{j'}b_{k'})$. Pairwise distances could be within-facets or between-facets. Figure \ref{fig:distance-explain} illustrates how the within-facet or between-facet distances are defined. Pairwise distances are within-facets ($d_{w}$) when $b_{k} = b_{k'}$, that is, between pairs of the form $(a_{j}b_{k}, a_{j'}b_{k})$ as shown in panel (3) of Figure \ref{fig:distance-explain}. If categories are ordered (like all temporal cyclic granularities), then only distances between pairs where $a_{j'} = (a_{j+1})$ are considered (panel (4)). Pairwise distances are between-facets ($d_{b}$) when they are considered between pairs of the form $(a_{j}b_{k}, a_{j}b_{k'})$.
+Consider two cyclic granularities $A$ and $B$, such that $A = \{ a_j: j = 1, 2, \dots, J\}$ and $B = \{ b_k: k = 1, 2, \dots, K\}$ with $A$ placed across x-axis and $B$ across facets. Let the pairwise distances between pairs $(a_{j} b_{k}, a_{j'}, b_{k})$ be denoted as $d_{(jk, j'k')} = JSD(a_{j}b_{k}, a_{j'}b_{k'})$. Pairwise distances could be within-facets or between-facets. Figure \ref{fig:distance-explain} illustrates how the within-facet or between-facet distances are defined. Pairwise distances are within-facets ($d_{w}$) when $b_{k} = b_{k'}$, that is, between pairs of the form $(a_{j}b_{k}, a_{j'}b_{k})$ as shown in panel (3) of Figure \ref{fig:distance-explain}. If categories are ordered (like all temporal cyclic granularities), then only distances between pairs where $a_{j'} = (a_{j+1})$ are considered (panel (4)). Pairwise distances are between-facets ($d_{b}$) when they are considered between pairs of the form $(a_{j}b_{k}, a_{j}b_{k'})$.
 
 
 ```{r distance-explain, fig.cap = "Within and between-facet distances shown for two cyclic granularities A and B, where A is mapped to x-axis and B is mapped to facets. The dotted lines represent the distances between different categories. Panel 1) and 2) show the between-facet distances. Panel 3) and 4) are used to illustrate within-facet distances when categories are un-ordered or ordered respectively. When categories are ordered, distances should only be considered for consecutive x-axis categories. Between-facet distances are distances between different facet levels for the same x-axis category, for example, distances between {($a_1$,$b_1$) and ($a_1$, $b_2$)} or {($a_1$,$b_1$) and ($a_1$, $b_3$)}."}
@@ -302,13 +302,13 @@ From Section \ref{sec:idea}, the idea is to put more weights on within-facet dis
 \begin{equation}
 d*_{(j,k), (j'k')} =
 \begin{cases}
-\lambda d_{(j,k), (j'k')},& \text{if } d = d_w\\
-(1-\lambda)  d_{(j,k), (j', k')},              & \text{if } d = d_b\\
+\lambda d_{(jk), (j'k')},& \text{if } d = d_w\\
+(1-\lambda)  d_{(jk), (j'k')},              & \text{if } d = d_b\\
 \end{cases}
 \end{equation}
 
 The maximum weighted pairwise distances are defined as:
-$$WPD = max_{j, j', k, k'}(d*_{(j,k), (j', k')})
+$$WPD = max_{j, j', k, k'}(d*_{(jk), (j'k')})
 \forall j, j' \in \{1, 2, \dots, J\}, k, k' \in \{1, 2, \dots, K\}$$.
 
 
@@ -375,44 +375,42 @@ Dist 2: $N(\mu, 1)$ (faceted with different values of $\mu$: not yet just for on
 Dist 3: $N(0, \sigma)$ (faceted with different values of $\sigma$: not yet just for one value now)
 Dist 4: $N(\mu, \sigma)$ faceted with different values of mu and sigma, for all levels of x and facet to see how value of wpd changes with that of change in parameters.
 
-**Objective:** 1. Behavior of wpd under different null designs N(0,1), N(5, 1), N(0,5) and N(5,5), Gamma(0,1), Gamma(0, 0.2) for different nx and nfacets. Here, we have to fix a value of lambda = 0.67.
+**Objective:** 1. Behavior of wpd under different null designs N(0,1), N(5, 1), Gamma(0.5,1), Gamma(2,1) for different nx and nfacets. Here, we have to fix a value of lambda = 0.67.
 
 **Assumptions:** There is no difference in distribution between any facet or x-category
 nsim = 200
 lambda = 0.67
 
+
 **Questions:** 
 - How raw value of wpd changes with different nx and nfacet for different location and scale of a Normal and non-normal distribution
 
 
-```{r}
-
+```{r normal-diff, fig.cap="Ridge plots of raw wpd is shown for N(0,1) and N(5,1) distribution. The densities change across different facet and x levels but look same for the two distributions, which implies wpd value is unaffected by the change is mean value of the normal distribution"}
+knitr::include_graphics(here::here("simulations/null_design/figs/normal_ridge_nxbynfacet_wpd_N01.png"))
 ```
 
 
-```{r}
-
+```{r gamma-diff, fig.cap="Ridge plots of raw wpd is shown for G(0.5,1) and G(2,1) distribution. The densities change across different facet and x levels and also for the two distributions, which implies wpd value is affected by the change in location value when distributions are not normal."}
+knitr::include_graphics(here::here("simulations/null_design/figs/gamma_ridge_nxbynfacet.png"))
 ```
 
+<!-- ### Choice of alternate designs -->
 
-### Choice of alternate designs
+<!-- A normal distribution is taken for this purpose. We would calibrate the values of $WPD$ for different designs illustrated in Section \ref{sec:idea}. -->
 
-A normal distribution is taken for this purpose. We would calibrate the values of $WPD$ for different designs illustrated in Section \ref{sec:idea}.
-
-$$\mu_{j.} = \mu + j\omega$$
-or, $$\mu_{.k} = \mu + k\omega$$ where,   
-$j$ and $k$ are the index of the x and facet category respectively 
-$\mu$ is the mean of the first category and $\omega$ is the increment from the starting value.
-
-
-mean = 0
-range_mean = c(0, 1, 3,  5, 7, 15, 20)
-sd = 1
-range_sd = c(1, 3,  5, 7, 15, 20)
-range_w =  c(1, 2, 3, 4, 5)
-range_lambda = seq(0.1, 0.9, 0.05)
+<!-- $$\mu_{j.} = \mu + j\omega$$ -->
+<!-- or, $$\mu_{.k} = \mu + k\omega$$ where,    -->
+<!-- $j$ and $k$ are the index of the x and facet category respectively  -->
+<!-- $\mu$ is the mean of the first category and $\omega$ is the increment from the starting value. -->
 
 
+<!-- mean = 0 -->
+<!-- range_mean = c(0, 1, 3,  5, 7, 15, 20) -->
+<!-- sd = 1 -->
+<!-- range_sd = c(1, 3,  5, 7, 15, 20) -->
+<!-- range_w =  c(1, 2, 3, 4, 5) -->
+<!-- range_lambda = seq(0.1, 0.9, 0.05) -->
 
 
 ## Choice of tuning parameters
@@ -427,8 +425,8 @@ Value of the parameters chosen for this simulation are $\mu = 0$, $\sigma = 1$ a
 
 Fixing omega, where the design interacts
 
-```{r tuning-one-omega}
-knitr::include_graphics(here::here("simulations/tuning_param/figs/intersection_plot.png"))
+```{r tuning-one-omega, fig.caption = "WPD from two designs are plotted for different values of lambda for different x and facet categories. For omega = 1, the designs intersect for 0.6<lamba<=0.75, whereas for higher omega, design intersects at lambda = 0.5"}
+knitr::include_graphics(here::here("simulations/tuning_param/figs/fixed_omega.png"))
 ```
 
 How value of lambda changes with increasing omega
